<resources>
    <string name="app_name">Promun</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_route">SelectRoute</string>
    <string name="SelectRoute_Title">Select Route</string>
    <string name="title_activity_select_asset">SelectAsset</string>
    <string name="SelectAsset_Title">Select Asset</string>
    <string name="BarScan_Title">Scan Item</string>
    <string name="title_activity_meter_reading">MeterReadingActivity</string>
    <string name="title_activity_input_reading">inputReadingActivity</string>
    <string name="title_activity_select_note">SelectNoteActivity</string>
    <string name="title_activity_select_no_access">SelectNoAccessActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_select_condition">SelectCondition</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_log_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_get_node_id">GetNodeIDActivity</string>
    <string name="Get_Node_Action_Enter">Enter</string>
    <string name="Get_Node_Prompt_node_id">Enter Node ID</string>
    <string name="error_invalid_node_id">Node ID cannot be empty</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="scan">scan</string>
    <string name="title_location_permission">Location Permission Request</string>
    <string name="text_location_permission">Promun Mobile Requires Your Location For Accurate Scannings and Readings</string>
    <string name="ok">OK</string>
    <string name="out_of_location">Out of Location:</string>
    <string name="textview">TextView</string>
    <string name="previously_disposed">Previously Disposed:</string>
    <string name="not_scanned_in_register">Not Scanned In Register</string>
    <string name="already_been_scanned">Already Been Scanned:</string>
    <string name="manually_scanned">Manual Scanning:</string>
    <string name="new_room">New Room</string>
    <string name="newly_scanned">Newly Scanned:</string>
    <string name="total_asset_count">Total Asset Count:</string>
    <string name="decimalfix">..$</string>
    <string name="location">Location:</string>
    <string name="scan_new_room">Scan Room</string>
    <string name="serial_nr">Serial Nr:</string>
    <string name="department">Department:</string>
    <string name="barcode">Barcode:</string>
    <string name="room_number">Registered To:</string>
    <string name="description">Description</string>
    <string name="condition">Condition:</string>
    <string name="comments1">Comment 1:</string>
    <string name="comments2">Comment 2:</string>
    <string name="useful_life">Useful Life:</string>
    <string name="complete_room">Complete Room</string>
    <string name="add_onto_remaining">Add Onto Remaining:</string>
    <string name="useful_remaining">Useful Remaining:</string>
    <string name="asset_summary">ASSET SUMMARY</string>
    <string name="out_of_location1">Out of Location:</string>
    <string name="previously_disposed1">Previously Disposed:</string>
    <string name="textview1">TextView</string>
    <string name="already_been_scanned1">Already Been Scanned:</string>
    <string name="manually_scanned1">Manually Scanned:</string>
    <string name="total_asset_count1">Total Asset Count:</string>
    <string name="scan_new_room1">Scan New Room</string>
    <string name="newly_scanned1">Scanned Elsewhere:</string>
    <string name="not_scanned_in_register1">Not Registered:</string>
    <string name="not_yet_scanned1">Not Yet Scanned:</string>
    <string name="select_warehouse">SELECT WAREHOUSE</string>
    <string name="search">Enter Room Barcode</string>
    <string name="all_rooms">All Rooms:</string>
    <string name="assetscanboxprompt">Please Input Asset Barcode</string>
    <string name="assetwasscanned">S</string>
    <string name="roomscanboxprompt">Please Input Room Barcode</string>
    <string name="responsible_person">Responsible Person:</string>
    <string name="assets_scanned">Scan Counter:</string>
    <string name="not_registered">Not Registered</string>
    <string name="select_description">SELECT DESCRIPTION</string>
    <string name="room_summary">ROOM SUMMARY</string>
    <string name="searchpic">searchpic</string>
    <string name="enter_description">Enter Description</string>
    <string name="asset">Asset</string>
    <string name="building">Building:</string>
    <string name="room_code">Room Code:</string>
    <string name="warehouse">WAREHOUSE:</string>
    <string name="bin_qty">Bin Qty:</string>
    <string name="bin">Bin:</string>
    <string name="stock_code">Stock Code:</string>
    <string name="category">Category:</string>
    <string name="units_of_measure">Units of Measure:</string>
    <string name="reorder_level">Reorder Level:</string>
    <string name="maximum_level">Maximum Level:</string>
    <string name="expected_qty">Expected Qty:</string>
    <string name="notes">Notes:</string>
    <string name="scan_new_bin">Scan New Bin</string>
    <string name="new_warehouse">New Warehouse</string>
    <string name="title_activity_maps">Android Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Google Map API key</string>
    <string name="test">TEST</string>
    <string name="todo">TODO</string>
    <string name="meter_distance_tolerance">meter_distance_tolerance</string>
    <string name="this_is_a_very_long_route_description">THIS IS A VERY LONG ROUTE DESCRIPTION</string>
    <string name="clear_selections">Clear</string>
    <string name="all">All</string>
    <string name="meter_number">Meter Number</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="find_a_meter">FIND A METER</string>
    <string name="find">Find</string>
    <string name="please_log_in">PLEASE LOG IN</string>
    <string name="password">Password</string>
    <string name="user_input_data">User Input Data</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="erf">Erf#</string>
    <string name="notes_amp_access"><![CDATA[Notes & Access]]></string>
    <string name="note">Note</string>
    <string name="del">Del</string>
    <string name="meter_data">Meter Data</string>
    <string name="meter">Meter #</string>
    <string name="e">E</string>
    <string name="_123456">123456</string>
    <string name="reading">Reading</string>
    <string name="_12345">12345</string>
    <string name="route">Route</string>
    <string name="route_description">Route Description</string>
    <string name="time">time</string>
    <string name="release_date">Released On:</string>
    <string name="w">W</string>
    <string name="close_route">CLOSE ROUTE</string>
    <string name="route_777">Route 777</string>
    <string name="meters_not_read">Meters not read</string>
    <string name="no_access">No Access</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="message">Message</string>
    <string name="_1234567890">1234567890</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="clear">CLEAR</string>
    <string name="enter">ENTER</string>
    <string name="scan_asset">SCAN ASSET</string>
    <string name="select_note">SELECT NOTE</string>
    <string name="notes_and_user_inputs">Notes and User Inputs</string>
    <string name="useful_life_information">Useful Life Information</string>
    <string name="asset_information">Asset Information</string>
    <string name="quantity">Quantity:</string>
    <string name="scanned_in">Scanned in:</string>
    <string name="scanned_in_room">Scanned in Room:</string>
    <string name="scanned_on">Scanned on:</string>
    <string name="not_yet_scanned">not scanned</string>
    <string name="scan_information">Scan Information</string>
    <string name="current_room">Current Room:</string>
    <string name="user">User</string>
    <string name="available_modules">AVAILABLE MODULES</string>
    <string name="logged_in">Logged In As:</string>
    <string name="welcome_to_promun">Welcome to M-Data</string>
    <string name="route_title">Route:</string>
    <string name="select_route_to_read">SELECT ROUTE TO READ</string>
    <string name="meter_information">Meter Information</string>
    <string name="checking_database_please_wait">Checking database please wait…</string>
    <string name="settings">Settings</string>
    <string name="asset_tracking">Asset Tracking</string>
    <string name="meter_reading">Meter Reading</string>
    <string name="these_settings_can_change_the_functionality_of_the_promun_mobile_app_please_do_not_change_these_unless_permission_has_been_given_to_you">These settings can change the functionality of the Promun Mobile app. Please do not change these unless permission has been given to you.</string>
    <string name="cycle_settings">Cycle Settings</string>
    <string name="current_ip">Current IP:</string>
    <string name="last_connect_time">Last Connect Time:</string>
    <string name="pending_outgoing_batches">Pending Outgoing Batches:</string>
    <string name="pending_incoming_batches">Pending Incoming Batches:</string>
    <string name="data_currently_sending">Data Currently Sending:</string>
    <string name="version">Version:</string>
    <string name="stock_taking">Stock Taking</string>
    <string name="rdata_logo">rdata_logo</string>
    <string name="manual_tag">X</string>
    <string name="clear_batches">Clear Batches</string>
    <string name="scanning_beep">Scanning Beep</string>
    <string name="asset_description">Asset Description</string>
    <string name="room">Room:</string>
    <string name="decimal">.</string>
    <string name="node">Node:</string>
    <string name="nodenamegoeshere">nodenamegoeshere</string>
    <string name="clear_context">Clear Context</string>
    <string name="upload_images">Upload Images</string>
    <string name="reload_node">Reload Node</string>
    <string name="load_schema">Load Schema</string>
    <string name="pull_data">Pull Data</string>
    <string name="push_data">Push Data</string>
    <string name="send_database">Send Database</string>
    <string name="select_no_access">SELECT NO ACCESS</string>
    <string name="back">Back</string>
    <string name="route_summary">Route Summary</string>
    <string name="enable_pictures">Enable Pictures</string>
    <string name="on_device">On Device</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="current">Current:</string>
    <string name="latest">Latest:</string>
    <string name="send_traces">Send Traces</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="filename">filename</string>
    <string name="value_goes_here">Value Goes Here</string>
    <string name="icon_for_sync_status_with_cloud">Icon for sync status with cloud</string>
    <string name="icons_for_sync_status_with_phone">Icons for sync status with phone</string>
    <string name="select_job">Select Job</string>
    <string name="job_information">Job Information</string>
</resources>